Changing active keymap is not auto-saved #64604

Closed
opened 2019-05-14 15:33:37 +02:00 by William Reynish · 5 comments

System Information
Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38

Blender Version
Broken: version: 2.80 (sub 64), branch: master (modified), commit date: 2019-05-14 12:21, hash: 687385b963)

Short description of error
With the new Save on Exit feature, Blender is meant to auto-save changes in Preferences. However, changing the active keymap is not saved correctly, unless you manually press Save Preferences

Exact steps for others to reproduce the error

  • Open Preferences
  • Make sure Save on Exit is enabled
  • Change the keymap from eg Blender to Industry Compatible
  • Quit Blender
  • Re-open Blender.

Notice that the keymap is set back to Blender again. The changes were not saved.

**System Information** Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38 **Blender Version** Broken: version: 2.80 (sub 64), branch: master (modified), commit date: 2019-05-14 12:21, hash: `687385b963`) **Short description of error** With the new Save on Exit feature, Blender is meant to auto-save changes in Preferences. However, changing the active keymap is not saved correctly, unless you manually press Save Preferences **Exact steps for others to reproduce the error** - Open Preferences - Make sure Save on Exit is enabled - Change the keymap from eg Blender to Industry Compatible - Quit Blender - Re-open Blender. Notice that the keymap is set back to Blender again. The changes were not saved.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42 it seems like there's a missing dirty tag here still?

@ideasman42 it seems like there's a missing dirty tag here still?

This issue was referenced by 2564f2c1b3

This issue was referenced by 2564f2c1b3f9a007218522276c57ec3914302da0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64604
No description provided.