Fix T64604: Changing keymap doesn't tag preferences as dirty